<resources>
    <string name="app_name">Whatch The Movie</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="backdrop_movie">Backdrop Movie</string>
    <string name="title_movies">Title Movies</string>
    <string name="popularity">Popularity</string>
    <string name="cast_image">Cast Image</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="image_favorite">Image Favorite</string>
    <string name="detail_genre">detail genre</string>
    <string name="cast">Cast</string>
    <string name="empty_movie">Empty Movie</string>
    <string name="empty_tv_show">Empty Tv Show</string>
    <string name="change">Change</string>
    <string name="change_language">Change Language</string>
    <string name="search">Search</string>
    <string name="AddFav">Added to Favorite</string>
    <string name="removeFav">Removed from Favorite</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="en">English</string>
    <string name="in">Indonesian</string>
    <string name="press_exit">Press Again to Exit</string>
    <string name="please_check_your_connection">Please Check Your Connection</string>
    <string name="gradient">Gradient</string>
    <string name="search_movie">Search Movies</string>
    <string name="icon_daily_reminder">Icon Daily Reminder</string>
    <string name="daily_description">You will receive a reminder to take a look this App every day at 7 a.m</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_desc">You will receive a reminder of movie that release on your current date at 8 a.m</string>
    <string name="language">Language</string>
    <string name="today_release">Today Release Reminder</string>
    <string name="has_release">Has Released today</string>
    <string name="no_release">There are no released Movie today</string>
    <string name="empty">Empty</string>
    <string name="search_Tv">Search Tv Show</string>
    <string name="daily_mgs">Try to see your favorite movie here</string>
    <string name="reminder_release">Reminder movie release</string>


</resources>
